# ferlium

./: .gitignore  .licensure.yml  AGENTS.md  CONFORMANCE.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  Makefile  README.md  TRADEMARK.md  build.rs  cspell.json  index.html  package.json  tsconfig.json  vite.config.ts  webdriver.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  commit-message-policy.yml
.zed/: settings.json
benches/: benches.rs
doc/: abi.md  architecture.md  experimental.md  fuzzing.md  hir-ownership.md  hir-to-ssa.md  roadmap.md  runtime-memory-limits.md  runtime-sandboxing.md  ssa-error-propagation.md  ssa-ir.md  ssa-uninit-tracking.md
docs/book/en/: book.toml
docs/book/en/highlightjs/: ferlium.js
docs/book/en/src/: SUMMARY.md  array-ranges-and-iteration.md  bitwise-operations.md  control-flow.md  effects.md  evaluation-and-mutable-state.md  experimental.md  explicit-types.md  functions-and-type-inference.md  functions-as-values.md  getting-started.md  introduction.md  modules.md  numbers.md  pattern-matching.md  scope-and-mutability.md  sequence-processing.md  (+6 more)
docs/book/highlightjs/: ferlium.js
examples/: ferlium.rs  minimal.rs  print_stuff.rs  pscript.rs  validate_book.rs
ferlium_macros/: Cargo.toml
ferlium_macros/src/: lib.rs  native_fn_aliases.rs  ptr.rs
fuzz/: Cargo.toml
fuzz/corpus/diagnostics/: broken_diagnostic.fer  comments_unicode.fer  light_annotations.fer
fuzz/corpus/parse_any/: incomplete.fer  weird_text.fer
fuzz/corpus/programs/: fibonacci.fer  records_and_variants.fer  type_errors.fer
fuzz/fuzz_targets/: grammar_ide_compile.rs  ide_compile_any.rs  parse_any.rs
fuzz/grammar/: ferlium.ebnf
painturscript_macros/: Cargo.toml
painturscript_macros/src/: lib.rs
playground/: .gitignore  .npmcheckrc  Makefile  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
playground/script-api/: Cargo.toml
playground/script-api/.cargo/: config.toml
playground/script-api/src/: lib.rs
playground/script-api/tests/: web.rs
playground/src/: App.vue  annotation-extension.ts  demo-codes.ts  main.ts  position-panel-extension.ts  style.css  types.ts  vite-env.d.ts
playground/src/components/: CodeEditor.vue  ConsoleOutput.vue  DropdownSelect.vue  FlatLinkButton.vue
playground/src/language/: language-extension.ts  language.grammar
playground/test/: extract-test-grammar.js
script-api/: Cargo.toml
script-api/src/: lib.rs  utils.rs
script-api/tests/: web.rs
src/: App.vue  annotation-extension.ts  assert.rs  ast.rs  borrow_checker.rs  coherence.rs  containers.rs  demo-codes.ts  desugar.rs  dictionary_passing.rs  effects.rs  emit_ir.rs  emit_ssa.rs  error-underline-extension.ts  error.rs  escapes.rs  eval.rs  execution.rs  format.rs  format_string.rs  function.rs  graph.rs  import_resolver.rs  ir.rs  ir_syn.rs  lexer.l  lib.rs  list.rs  location.rs  main.ts  match.rs  module.rs  mutability.rs  never.rs  parser.lalrpop  parser.rs  parser.y  parser_helpers.rs  span.rs  style.css  (+15 more)
src/ast/: core.rs  expr.rs  module.rs  patterns.rs  types.rs
src/compiler/: artifacts.rs  diagnostics.rs  error.rs  mod.rs  pipeline.rs  session.rs
src/compiler/error/: assertions.rs  compilation.rs  mod.rs  runtime.rs
src/components/: CodeEditor.vue  ConsoleOutput.vue  SimpleButton.vue
src/desugar/: expr.rs  format_string.rs  import_resolver.rs  mod.rs  module.rs  patterns.rs  types.rs
src/hir/: borrow_checker.rs  dictionary.rs  dictionary_passing.rs  elaboration.rs  emit_associated_consts.rs  emit_expr.rs  emit_functions.rs  emit_hir.rs  emit_ir.rs  emit_subscripts.rs  emit_value_impl.rs  function.rs  hir_syn.rs  match.rs  mod.rs  remap.rs  value.rs  value_dispatch.rs
src/ide/: annotations.rs  char_index_lookup.rs  compiler.rs  diagnostics.rs  execution.rs  mod.rs  signatures.rs
src/language/: language-extension.ts  language.grammar
src/module/: debug_info.rs  function.rs  generated_projection.rs  id.rs  mod.rs  module_env.rs  modules.rs  path.rs  trait_impl.rs  type_alias_name.rs  uses.rs
src/parser/: ast.rs  helpers.rs  location.rs  mod.rs  parser.lalrpop
src/parser/ast/: expr.rs  mod.rs  module.rs  patterns.rs
src/ssa/: function.rs  instruction.rs  interpreter.rs  mod.rs  program.rs  unit.rs  value.rs  verify.rs
src/std/: array.rs  array_type.rs  bits.rs  buffer.rs  cast.rs  concat.rs  contains.rs  core.rs  core_traits_names.rs  data_text.rs  data_value.rs  dedup.rs  default.rs  empty.rs  flow.rs  hash.rs  io.rs  iterator.rs  json.rs  list.rs  logic.rs  math.rs  mem.rs  mod.rs  option.rs  ordering.rs  prelude.rs  product_value_deriver.rs  ptr.rs  range.rs  reverse.rs  serde.rs  slice.rs  sort.rs  split.rs  string.rs  value.rs  variant.rs
src/std/prelude/: array.fer  array_serde.fer  array_type.fer  comparison.fer  core_impls.fer  core_impls_dependent.fer  core_traits.fer  core_traits_dependent.fer  data_text.fer  data_value.fer  hash_collections.fer  json.fer  serde_impl.fer
src/types/: coherence.rs  effects.rs  mod.rs  mutability.rs  never.rs  recursive_equation.rs  trait.rs  trait_solver.rs  type.rs  type_constraints.rs  type_inference.rs  type_like.rs  type_mapper.rs  type_scheme.rs  type_scheme_display.rs  type_substitution.rs  type_visitor.rs  typing_env.rs  var_set.rs
src/types/type_inference/: constraints.rs  defaulting.rs  effect_solver.rs  expr.rs  mod.rs  substitution.rs  tables.rs  unify.rs
src/web/: char_index_lookup.rs  mod.rs
tests/: algorithm.rs  complex.rs  effects.rs  simple.rs
tests/common/: mod.rs
tests/harness/: deep_module1.fer  deep_module2.fer  mod.rs
tests/language/: algorithm.rs  annotations.rs  attributes.rs  bits.rs  common.rs  complex.rs  deep_module1.fer  deep_module2.fer  effects.rs  main.rs  math.rs  multi_module.rs  recursive_types.rs  regression.rs  serde.rs  simple.rs  ssa.rs  std.rs  subscript.rs  trait.rs  type.rs  type_alias.rs  type_defs.rs  value.rs
tests/modules/: bank_account.fer  calculator.fer  csv.fer  factorial.fer  fibonacci.fer  quicksort.fer  rle_encode.fer  sieve.fer  sudoku.fer
