[workspace]
members = [ ".", "ferlium_macros", "playground/script-api" ]

[package]
name = "ferlium"
version = "0.1.0"
publish = false
edition = "2021"
license = "Apache-2.0"
description = "Our mission: To bring the power of Haskell to the users of Python and Javascript."
authors = ["Enlightware GmbH"]
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.22.0"

[dev-dependencies]
test-log = "0.2.16"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rustyline = "15.0.0"
ariadne = "0.5"
env_logger ="0.11.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[dependencies]
dyn-clone = "1.0.17"
dyn-eq = "0.1.3"
dyn-hash = "0.2.0"
enum-as-inner = "0.6.0"
itertools = "0.13.0"
ustr = { git = "https://github.com/enlightware/ustr.git", branch = "script" }
smallvec = "1.13.1"
nonmax = "=0.5.5"
ordered-float = "4.2.0"
indexmap = "2.2.6"
num-traits = "0.2.19"
ena = "0.14.3"
regex = "1"
log = "0.4.22"
html-escape = "0.2.13"
paste = "1"
heck = "0.5.0"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
indoc = "2"
ferlium_macros = { path = "ferlium_macros" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.97"
