[workspace]
members = [ ".", "ferlium_macros", "playground/script-api" ]

[package]
name = "ferlium"
version = "0.1.0"
publish = false
edition = "2024"
license = "Apache-2.0"
description = "Our mission: To bring the power of Haskell to the users of Python and Javascript."
authors = ["Enlightware GmbH"]
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.22.0"

[dev-dependencies]
test-log = "0.2.16"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rustyline = "17.0.0"
ariadne = "0.5"
env_logger ="0.11.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[dependencies]
dyn-clone = "1.0.17"
dyn-eq = "0.1.3"
dyn-hash = "0.2.0"
derive-new = "0.7.0"
enum-as-inner = "0.6.0"
itertools = "0.14.0"
ustr = { git = "https://github.com/enlightware/ustr.git", branch = "script" }
smallvec = "1.13.1"
nonmax = "=0.5.5"
ordered-float = "5.0.0"
indexmap = "2.2.6"
num-traits = "0.2.19"
ena = "0.14.3"
regex = "1"
log = "0.4.22"
html-escape = "0.2.13"
paste = "1"
heck = "0.5.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
unicode-segmentation = "1.12.0"
indoc = "2"
json-event-parser = "0.2.2"
ferlium_macros = { path = "ferlium_macros" }

[target.'cfg(target_pointer_width = "32")'.dependencies]
ferlium_macros = { path = "ferlium_macros", features = ["ferlium_abi_32"] }

[target.'cfg(target_pointer_width = "64")'.dependencies]
ferlium_macros = { path = "ferlium_macros", features = ["ferlium_abi_64"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.97"
