[package]
name = "script-api"
version = "0.1.0"
authors = ["Stéphane Magnenat <stephane.magnenat@enlightware.ch>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7" }
log = "0.4"
wasm-logger = "0.2.0"
painturscript = { git = "https://gitlab.zwoggel.net/enlightware/paint-ur-script.git" }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
