[package]
name = "script-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Playgroud for ferlium."
authors = ["Enlightware GmbH"]
rust-version = "1.80"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
console_error_panic_hook = { version = "0.1.7" }
log = "0.4"
wasm-logger = "0.2.0"
html-escape = "0.2.13"
ferlium = { path = "../.." }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true